--- a/edwinschoice.client/src/components/Menu.css
+++ b/edwinschoice.client/src/components/Menu.css
@@ -1,31 +1,29 @@
 .menu_background {
-    background-size: cover; /* Ensure the image covers the entire container */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Prevent the image from repeating */
-    height: 100vh; /* Full height of the viewport */
-    display: flex; /* Flex container */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    height: 100vh; 
+    display: flex;
 
-    align-items: center; /* Center vertically */
-    flex-direction: column; /* Stack items vertically */
+    align-items: center; 
+    flex-direction: column; 
 }
 
 .menu-container {
-    text-align: center; /* Center text within the container */
+    text-align: center; 
 }
 
 
 
 body {
-    display: block !important; /* Override flex layout */
-    margin: 0;
+    display: block !important; 
     padding: 0;
 }
 
 h1 {
-    margin-top: 10rem;
     color: red;
     font-family: 'Island Moments', sans-serif;
-    font:'Island Moments';
+    font: 'Island Moments';
     font-size: 3.2em;
     line-height: 1.1;
 }
@@ -34,7 +32,7 @@ h1 {
 
 button {
     margin-top: 20px;
-    ButtonText:black;
+    ButtonText: black;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.3em .6em;
@@ -46,15 +44,14 @@ button {
     transition: border-color 0.25s;
     border-width: 5px;
     border-color: gray;
-    color:black
-    
+    color: black
 }
 
     button:hover {
-        border-block-color:gray;
-        background-color:saddlebrown;
-       transition:  .2s ease-in-out;
-       color:red;
+        border-block-color: gray;
+        background-color: saddlebrown;
+        transition: .2s ease-in-out;
+        color: red;
     }
 
     button:focus,
