--- a/edwinschoice.client/src/index.css
+++ b/edwinschoice.client/src/index.css
@@ -10,7 +10,9 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+ul {
+    list-style: none;
+}
 a {
     font-weight: 500;
     color: #646cff;
