--- a/edwinschoice.client/src/components/Endings.css
+++ b/edwinschoice.client/src/components/Endings.css
@@ -1,8 +1,33 @@
 .ending-container {
     text-align: center;
     padding: 20px;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    background-size: cover;
+    background-position: center;
 }
-
+.back_to_menu_button {
+    margin-top: 20px;
+    ButtonText: black;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.3em .6em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    border-width: 5px;
+    border-color: gray;
+    color: black
+}
 .endings-grid {
     display: flex;
     flex-wrap: wrap;
