--- a/edwinschoice.client/src/components/Endings.css
+++ b/edwinschoice.client/src/components/Endings.css
@@ -6,30 +6,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     position: relative;
     text-align: center;
     background-size: cover;
     background-position: center;
 }
+    .ending-container h1 {
+        color: red;
+        text-shadow: -1px -1px 2px black, 1px -1px 2px black, -1px 1px 2px black, 1px 1px 2px black;
+    }
+
 .back_to_menu_button {
+    text-transform: none;
+    font-family: Arial, Helvetica, sans-serif;
     margin-top: 20px;
-    ButtonText: black;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.3em .6em;
     font-size: 1em;
     font-weight: 500;
-    font-family: inherit;
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
     border-width: 5px;
     border-color: gray;
-    color: black
+    color: white;
 }
 .endings-grid {
     display: flex;
+    flex-direction:column;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
@@ -38,14 +44,27 @@
 .ending-card {
     border: 2px solid #333;
     padding: 15px;
-    width: 200px;
+    width: 80vw;
     background-color: #222;
     color: white;
     border-radius: 10px;
-}
+    display:flex;
 
+}
+.ending-card-text{
+    margin:0 auto;
+    display: flex;
+    flex-direction: column;
+}
+.ending-card-text h2{
+    margin:0 0 5px 0;
+}
+.ending-card p {
+        margin: 0;
+}
+ 
 .ending-image {
-    width: 20px;
+    width: 80px;
     height: auto;
     border-radius: 5px;
 }
