--- a/edwinschoice.client/src/components/Menu.css
+++ b/edwinschoice.client/src/components/Menu.css
@@ -32,9 +32,8 @@ body {
 
 
 
-.play_button {
+.button {
     margin-top: 20px;
-    ButtonText: black;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.3em .6em;
@@ -46,33 +45,17 @@ body {
     transition: border-color 0.25s;
     border-width: 5px;
     border-color: gray;
-    color: black
+    color: white;
 }
 
-    button:hover {
-        border-block-color: gray;
-        background-color: saddlebrown;
-        transition: .2s ease-in-out;
-        color: red;
-    }
+button:hover {
+    border-block-color: gray;
+    background-color: saddlebrown;
+    transition: .2s ease-in-out;
+    color: red;
+}
 
-    button:focus,
-    button:focus-visible {
-        outline: 4px auto -webkit-focus-ring-color;
-    }
-.endings_button {
-    margin-top: 20px;
-    ButtonText: black;
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.3em .6em;
-    font-size: 2em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-    border-width: 5px;
-    border-color: gray;
-    color: black
+button:focus,
+button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
 }
