--- a/edwinschoice.client/src/components/Battle.css
+++ b/edwinschoice.client/src/components/Battle.css
@@ -45,9 +45,11 @@
     transform: translate(-50%);
 }
 .attack {
+    padding:.5rem 1rem ;
+    border-radius:5px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%);
-    font-size:240px;
+    font-size:30px;
 }
