--- a/edwinschoice.client/src/components/Location.css
+++ b/edwinschoice.client/src/components/Location.css
@@ -51,7 +51,9 @@ body {
 }
 
 .inventory_menu {
+    flex-direction:column;
     z-index: 1;
+    display: flex;
     position: fixed;
     top: 0;
     left: -350px;
@@ -100,7 +102,7 @@ body {
     text-align: center;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    width: fit-content;
+    width: 100%;
 }
 
 
@@ -160,3 +162,19 @@ body {
     transition: opacity 0.3s ease; 
 }
 
+.inventory_item {
+    display: flex;
+
+    align-items: center; 
+    gap: 5px; 
+}
+
+.inventory_icon {
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: invert(1);
+    margin-left:30%;
+}
