--- a/edwinschoice.client/src/components/Location.css
+++ b/edwinschoice.client/src/components/Location.css
@@ -88,7 +88,8 @@ body {
 .text_box {
     position: absolute;
     width: 80%;
-    height: 200px;
+    max-height:300px;
+    min-height:150px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -109,7 +110,9 @@ body {
     overflow-wrap: break-word;
     width: 100%;
 }
-
+.item_name{
+    font-weight: 900;
+}
 
 .item-container {
     position: absolute;
@@ -169,11 +172,19 @@ body {
 
 .inventory_item {
     display: flex;
-
+   
     align-items: center; 
     gap: 5px; 
 }
-
+.holup{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    
+}
+ ul{
+    padding: unset;
+}
 .inventory_icon {
     width: 50px;
     height: 50px;
