--- a/edwinschoice.client/src/components/Battle.css
+++ b/edwinschoice.client/src/components/Battle.css
@@ -53,6 +53,17 @@
     transform: translate(-50%);
     font-size:30px;
 }
+
+.attack2 {
+    padding: .5rem 1rem;
+    border-radius: 5px;
+    position: fixed;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 30px;
+}
+
 .holup {
     display: flex;
     flex-direction: row;
