--- a/edwinschoice.client/src/components/Endings.css
+++ b/edwinschoice.client/src/components/Endings.css
@@ -1,7 +1,13 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
 .ending-container {
     text-align: center;
-    padding: 20px;
-    height: 100vh;
+    
+    min-height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -11,6 +17,7 @@
     text-align: center;
     background-size: cover;
     background-position: center;
+    overflow-y: auto;
 }
     .ending-container h1 {
         color: red;
