--- a/edwinschoice.client/src/components/Location.css
+++ b/edwinschoice.client/src/components/Location.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    min-height: 100vh;
     padding-bottom: 0;
     margin: 0;
     overflow: hidden; 
@@ -174,7 +174,7 @@ body {
     display: flex;
    
     align-items: center; 
-    gap: 5px; 
+  
 }
 .holup{
     display:flex;
