--- a/edwinschoice.client/src/components/Endings.css
+++ b/edwinschoice.client/src/components/Endings.css
@@ -27,7 +27,7 @@ html, body {
 .back_to_menu_button {
     text-transform: none;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 20px;
+    margin: 20px;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.3em .6em;
@@ -63,16 +63,29 @@ html, body {
     display: flex;
     flex-direction: column;
 }
-.ending-card-text h2{
-    margin:0 0 5px 0;
+    .ending-card-text h2 {
+        margin: 0 0 5px 0;
+        font-size: 40px;
+    }
+@media screen and (max-width: 601px) {
+    .ending-card-text h2 {
+        margin: 0 0 5px 0;
+        font-size: 20px;
+    }
+    .ending-card p {
+        margin: 0;
+        font-size: 15px;
+    }
 }
 .ending-card p {
-        margin: 0;
+    margin: 0;
+    font-size: 30px;
 }
+   
 
-.ending-image {
-    width: 80px;
-    height: auto;
-    border-radius: 5px;
-    filter: invert(1);
-}
+    .ending-image {
+        width: 80px;
+        height: 80px;
+        border-radius: 5px;
+        filter: invert(1);
+    }
