--- a/edwinschoice.client/src/components/Menu.css
+++ b/edwinschoice.client/src/components/Menu.css
@@ -13,6 +13,14 @@
     text-align: center; 
 }
 
+    .menu_title {
+        padding-top: 2rem;
+        color: red;
+        font-family: 'Island Moments', sans-serif;
+        font: 'Island Moments';
+        font-size: 90px;
+        line-height: 1.1;
+    }
 
 
 body {
@@ -20,24 +28,23 @@ body {
     padding: 0;
 }
 
+@media screen and (max-width: 601px) {
 
 .menu_title {
     padding-top:2rem;
     color: red;
     font-family: 'Island Moments', sans-serif;
     font: 'Island Moments';
-    font-size: 3.2em;
+    font-size: 30px;
     line-height: 1.1;
 }
-
-
-
+}
 .button {
     margin-top: 20px;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.3em .6em;
-    font-size: 2em;
+    font-size: 40px;
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
@@ -47,15 +54,32 @@ body {
     border-color: gray;
     color: white;
 }
+@media screen and (max-width: 601px) {
 
-button:hover {
-    border-block-color: gray;
-    background-color: saddlebrown;
-    transition: .2s ease-in-out;
-    color: red;
+    .button {
+        margin-top: 20px;
+        border-radius: 8px;
+        border: 1px solid transparent;
+        padding: 0.3em .6em;
+        font-size: 20px;
+        font-weight: 500;
+        font-family: inherit;
+        background-color: #1a1a1a;
+        cursor: pointer;
+        transition: border-color 0.25s;
+        border-width: 5px;
+        border-color: gray;
+        color: white;
+    }
 }
+    button:hover {
+        border-block-color: gray;
+        background-color: saddlebrown;
+        transition: .2s ease-in-out;
+        color: red;
+    }
 
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
+    button:focus,
+    button:focus-visible {
+        outline: 4px auto -webkit-focus-ring-color;
+    }
