--- a/edwinschoice.client/src/components/Endings.css
+++ b/edwinschoice.client/src/components/Endings.css
@@ -63,10 +63,7 @@ html, body {
     display: flex;
     flex-direction: column;
 }
-    .ending-card-text h2 {
-        margin: 0 0 5px 0;
-        font-size: 40px;
-    }
+    
 @media screen and (max-width: 601px) {
     .ending-card-text h2 {
         margin: 0 0 5px 0;
@@ -74,14 +71,21 @@ html, body {
     }
     .ending-card p {
         margin: 0;
-        font-size: 15px;
+        font-size: 17px;
     }
 }
-.ending-card p {
-    margin: 0;
-    font-size: 30px;
+@media screen and (min-width: 601px) {
+    .ending-card-text h2 {
+        margin: 0 0 5px 0;
+        font-size: 40px;
+    }
+
+    .ending-card p {
+        margin: 0;
+        font-size: 30px;
+    }
 }
-   
+
 
     .ending-image {
         width: 80px;
