--- a/edwinschoice.client/src/components/Endings.css
+++ b/edwinschoice.client/src/components/Endings.css
@@ -78,7 +78,7 @@ html, body {
 @media screen and (min-width: 601px) {
     .ending-card-text h2 {
         margin: 0 0 5px 0;
-        font-size: 40px;
+        font-size: 35px;
     }
     .back_to_menu_button {
         text-transform: none;
@@ -87,7 +87,7 @@ html, body {
         border-radius: 8px;
         border: 1px solid transparent;
         padding: 0.3em .6em;
-        font-size: 2em;
+        font-size: 1.5rem;
         font-weight: 500;
         background-color: #1a1a1a;
         cursor: pointer;
@@ -98,12 +98,13 @@ html, body {
     }
     .ending-card p {
         margin: 0;
-        font-size: 30px;
+        font-size: 25px;
     }
 }
 
 
     .ending-image {
+        margin:auto 0;
         width: 80px;
         height: 80px;
         border-radius: 5px;
