--- a/edwinschoice.client/src/components/Location.css
+++ b/edwinschoice.client/src/components/Location.css
@@ -31,6 +31,7 @@ body {
         height: auto;
     }
   .location_title {
+      color:white;
     position: fixed;
     top: 0;
     font-size: 60px;
